--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,9 +16,11 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "formik": "^2.4.6",
     "framer-motion": "^11.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
