--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
     "yup": "^1.4.0"
   },
   "devDependencies": {
