--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,8 +16,11 @@
     "@emotion/styled": "^11.11.5",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
+    "file-saver": "^2.0.5",
     "formik": "^2.4.6",
     "framer-motion": "^11.2.4",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
