--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-table": "^7.8.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
