--- a/backend/package.json
+++ b/backend/package.json
@@ -23,6 +23,7 @@
     "express-fileupload": "^1.4.0",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "moment": "^2.30.1",
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
