updated doctor page

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,10 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
+    "react-select": "^5.8.0",
     "react-table": "^7.8.0",
+    "react-tabs": "^6.0.2",
+    "react-toastify": "^10.0.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
