socket.io for one module done

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "react-table": "^7.8.0",
     "react-tabs": "^6.0.2",
     "react-toastify": "^10.0.5",
+    "socket.io-client": "^4.7.5",
     "yup": "^1.4.0"
   },
   "devDependencies": {
