--- a/backend/package.json
+++ b/backend/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^7.4.3",
     "morgan": "^1.10.0",
     "nodemailer": "^6.9.4",
+    "socket.io": "^4.7.5",
     "stripe": "^13.5.0",
     "validator": "^13.11.0"
   }
